
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int tv_sec; int tv_usec; } ;


 int gettimeofday (struct timeval*,int *) ;
 int random () ;
 int srandom (int) ;

int getkey(int i) {
        int seed;
        struct timeval tm;
        gettimeofday(&tm, ((void*)0));
        seed = tm.tv_sec + tm.tv_usec; srandom(seed);
        return (random() % i) +1;
}
