; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/generator/extr_13328.c_getkey.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/generator/extr_13328.c_getkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @getkey(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.timeval, align 4
  store i32 %0, i32* %2, align 4
  %5 = call i32 @gettimeofday(%struct.timeval* %4, i32* null)
  %6 = getelementptr inbounds %struct.timeval, %struct.timeval* %4, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = getelementptr inbounds %struct.timeval, %struct.timeval* %4, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = add nsw i32 %7, %9
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @srandom(i32 %11)
  %13 = call i32 (...) @random()
  %14 = load i32, i32* %2, align 4
  %15 = srem i32 %13, %14
  %16 = add nsw i32 %15, 1
  ret i32 %16
}

declare dso_local i32 @gettimeofday(%struct.timeval*, i32*) #1

declare dso_local i32 @srandom(i32) #1

declare dso_local i32 @random(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
